feat: refactor permission professional end admin